--- a/LoadingProgress/src/style.css
+++ b/LoadingProgress/src/style.css
@@ -24,6 +24,7 @@ body {
     transform: scaleX(0.0);
     transform-origin: top left;
     transition: transform 0.5s ease-in-out;
+    will-change: transform;
 }
 
 .ended {
