--- a/MixingHTMLandWebGL/src/style.css
+++ b/MixingHTMLandWebGL/src/style.css
@@ -1,25 +1,21 @@
-*
-{
+* {
     margin: 0;
     padding: 0;
 }
 
 html,
-body
-{
+body {
     overflow: hidden;
 }
 
-.webgl
-{
+.webgl {
     position: fixed;
     top: 0;
     left: 0;
     outline: none;
 }
 
-.loading-bar
-{
+.loading-bar {
     position: absolute;
     top: 50%;
     width: 100%;
@@ -30,9 +26,14 @@ body
     transition: transform 0.5s;
 }
 
-.loading-bar.ended
-{
+.loading-bar.ended {
     transform: scaleX(0);
     transform-origin: 100% 0;
     transition: transform 1.5s ease-in-out;
+}
+
+.point {
+    position: absolute;
+    top: 50%;
+    left: 50%;
 }
