--- a/MixingHTMLandWebGL/src/style.css
+++ b/MixingHTMLandWebGL/src/style.css
@@ -38,6 +38,21 @@ body {
     left: 50%;
 }
 
+.point .label {
+    color: #ffffff;
+    text-align: center;
+    position: absolute;
+    font-family: Arial, Helvetica, sans-serif;
+    top: -20px;
+    left: -20px;
+    width: 40px;
+    height: 40px;
+    background-color: #00000077;
+    border-radius: 50%;
+    opacity: 75%;
+    line-height: 40px;
+}
+
 .point .text {
     display: none;
 }
