--- a/MixingHTMLandWebGL/src/style.css
+++ b/MixingHTMLandWebGL/src/style.css
@@ -58,7 +58,7 @@ body {
 .point .text {
     color: white;
     position: absolute;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     top: 30px;
     left: -100px;
     width: 200px;
