--- a/MixingHTMLandWebGL/src/style.css
+++ b/MixingHTMLandWebGL/src/style.css
@@ -53,6 +53,11 @@ body {
     line-height: 40px;
     font-weight: 100;
     font-size: 1.2rem;
+    transition: scale 0.3s ease-in-out;
+}
+
+.point .label:hover {
+    scale: 1.2;
 }
 
 .point .text {
