--- a/MixingHTMLandWebGL/src/style.css
+++ b/MixingHTMLandWebGL/src/style.css
@@ -54,6 +54,7 @@ body {
     font-weight: 100;
     font-size: 1.2rem;
     transition: scale 0.3s ease-in-out;
+    will-change: scale;
 }
 
 .point .label:hover {
@@ -75,6 +76,7 @@ body {
     padding: 0.5rem;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
+    will-change: opacity;
 }
 
 .point:hover .text {
