--- a/MixingHTMLandWebGL/src/style.css
+++ b/MixingHTMLandWebGL/src/style.css
@@ -77,6 +77,7 @@ body {
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
     will-change: opacity;
+    pointer-events: none;
 }
 
 .point:hover .text {
