--- a/MixingHTMLandWebGL/src/style.css
+++ b/MixingHTMLandWebGL/src/style.css
@@ -54,8 +54,9 @@ body {
     font-weight: 100;
     font-size: 1.2rem;
     transition: scale 0.3s ease-in-out;
-    will-change: scale;
     cursor: help;
+    transform: scale(0, 0);
+    will-change: scale;
 }
 
 .point .label:hover {
