--- a/MixingHTMLandWebGL/src/style.css
+++ b/MixingHTMLandWebGL/src/style.css
@@ -56,6 +56,7 @@ body {
     transition: scale 0.3s ease-in-out;
     cursor: help;
     transform: scale(0, 0);
+    transition: transform 0.3s ease-in-out;
     will-change: scale;
 }
 
