Gave the label a scale if 1 when the point has a visible css class

--- a/MixingHTMLandWebGL/src/style.css
+++ b/MixingHTMLandWebGL/src/style.css
@@ -64,6 +64,10 @@ body {
     scale: 1.2;
 }
 
+.point.visible .label {
+    transform: scale(1, 1);
+}
+
 .point .text {
     color: white;
     position: absolute;
